# plink

./: .gitignore  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  libtool  pilot-link.m4
bindings/: Makefile.am  Makefile.in  README
bindings/Perl/: Makefile.PL
bindings/Python/: setup-standalone.py  setup.py
bindings/Python/src/: general-maps.i  pi-dlp-maps.i  pi-error.i  pi-socket-maps.i  pisock.py  pisock_wrap.c
bindings/Tcl/: Makefile.am  Makefile.in
darwin/: Makefile.in
doc/: Makefile.in  TODO
doc/man/: Makefile.in
doc/xml/: Makefile.in  docbook.xsl
include/: Makefile.in  pi-source.h  pi-version.h
libpisock/: Makefile.in  blob.c  calendar.c  datebook.c  expense.c  mail.c  notepad.c  socket.c  todo.c  versamail.c
libpisync/: Makefile.in
m4/: python.m4  socklen.m4  tcl.m4  threads.m4
popt/: Makefile.in
src/: .gitignore  Makefile.am  Makefile.in  pilot-read-notepad.c  pilot-read-palmpix.c  pilot-read-screenshot.c  pilot-read-veo.c
src/pix/: Makefile.in
src/prc/: Makefile.in
tests/: Makefile.am  Makefile.in  calendardb-test.c  locationdb-test.c
